# LyricstoSlides

./: .gitignore  README.md  pyproject.toml
src/lyrics_to_slides/: __init__.py  cli.py  models.py  pdf_ingest.py  pipeline.py  pptx_writer.py  song_parser.py
